Creación de FrontEnd-Store

--- a/nosotros.html
+++ b/nosotros.html
@@ -4,17 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FronEnd Store</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+    <title>FrontEnd Store</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Staatliches&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
     <header class="header">
         <a href="index.html">
-            <img class="header__logo" src="img/logo.png" alt="logotipo">
+            <img class="header__logo" src="img/logo.png" alt="Logotipo">
         </a>
     </header>
 
@@ -28,14 +31,13 @@
 
         <div class="nosotros">
             <div class="nosotros__contenido">
-                <p>Sed dolor urna, tempus nec magna in, tincidunt fermentum leo. Vivamus magna dolor, pulvinar ac nisi non, vehicula
-                iaculis ipsum. Pellentesque at lectus tellus. Donec imperdiet sagittis auctor. Nulla facilisi. Sed tellus ante,
-                imperdiet in nibh non, porttitor malesuada dui. Etiam semper sem quis diam lacinia, placerat cursus orci consectetur.
-                Sed malesuada ac diam ut maximus. Vivamus consequat lorem sed tortor volutpat blandit.</p>
+                <p>Suspendisse eu cursus mi. Nulla pretium laoreet mauris, ut sodales leo viverra et. Mauris sodales sodales mauris, et
+                pharetra orci feugiat non. In nec aliquam felis. Nam semper, mauris quis vestibulum cursus, enim augue fringilla turpis,
+                posuere vestibulum nisl.</p>
                 
-                <p>Ut ultrices purus a consectetur convallis. Praesent tellus dolor, mattis vitae felis vel, porta mollis magna. Curabitur
-                a malesuada ante. Mauris accumsan ante ac lacinia sodales. Sed semper eget tortor vitae maximus. Maecenas in ipsum
-                justo. Pellentesque augue libero, sodales at lorem et, pharetra congue nibh.</p>
+                <p>Fusce ornare nulla nec lobortis tincidunt. Aenean dictum et quam eu posuere. Suspendisse quis maximus dolor, a interdume
+                fermentum. Duis laoreet tincidunt bibendum. Morbi vel massa aliquet, tempor lectus a, rutrum nunc. Pellentesque habitant
+                morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
             </div>
             <img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosotros">
         </div>
@@ -45,41 +47,42 @@
         <h2 class="comprar__titulo">¿Porqué Comprar con nosotros?</h2>
 
         <div class="bloques">
-            <div class="bloque">
+            <div class= "bloque">
                 <img class="bloque__imagen" src="img/icono_1.png" alt="porque comprar">
-                <h3 class="bloque__titulo">El Mejor Precio</h3>
-                <p>Ut ultrices purus a consectetur convallis. Praesent tellus dolor, mattis vitae felis vel, porta mollis magna. Curabitur
-                a malesuada ante.</p>
+                <h3 class="bloque__titulo">Para Devs</h3>
+                <p>Fusce ornare nulla nec lobortis tincidunt. Aenean dictum et quam eu posuere. Suspendisse quis maximus dolor, a interdume
+                fermentum. Duis laoreet tincidunt bibendum.</p>
             </div>
 
             <div class="bloque">
                 <img class="bloque__imagen" src="img/icono_2.png" alt="porque comprar">
-                <h3 class="bloque__titulo">Para Devs</h3>
-                <p>Ut ultrices purus a consectetur convallis. Praesent tellus dolor, mattis vitae felis vel, porta mollis magna.
-                    Curabitur
-                    a malesuada ante.</p>
+                <h3 class="bloque__titulo">Envío Gratis</h3>
+                <p>Fusce ornare nulla nec lobortis tincidunt. Aenean dictum et quam eu posuere. Suspendisse quis maximus dolor, a
+                    interdume
+                    fermentum. Duis laoreet tincidunt bibendum.</p>
             </div>
 
             <div class="bloque">
                 <img class="bloque__imagen" src="img/icono_3.png" alt="porque comprar">
-                <h3 class="bloque__titulo">Envío Gratis</h3>
-                <p>Ut ultrices purus a consectetur convallis. Praesent tellus dolor, mattis vitae felis vel, porta mollis magna.
-                    Curabitur
-                    a malesuada ante.</p>
+                <h3 class="bloque__titulo">La Mejor Calidad</h3>
+                <p>Fusce ornare nulla nec lobortis tincidunt. Aenean dictum et quam eu posuere. Suspendisse quis maximus dolor, a
+                    interdume
+                    fermentum. Duis laoreet tincidunt bibendum.</p>
             </div>
 
             <div class="bloque">
                 <img class="bloque__imagen" src="img/icono_4.png" alt="porque comprar">
-                <h3 class="bloque__titulo">La Mejor Calidad</h3>
-                <p>Ut ultrices purus a consectetur convallis. Praesent tellus dolor, mattis vitae felis vel, porta mollis magna.
-                    Curabitur
-                    a malesuada ante.</p>
+                <h3 class="bloque__titulo">El Mejor Precio</h3>
+                <p>Fusce ornare nulla nec lobortis tincidunt. Aenean dictum et quam eu posuere. Suspendisse quis maximus dolor, a
+                    interdume
+                    fermentum. Duis laoreet tincidunt bibendum.</p>
             </div>
+
         </div>
     </section>
-    
+
     <footer class="footer">
-        <p class="footer__texto">Front End Store - Todos los Derechos Reservados 20223.</p>
+        <p class="footer__texto">Front End Store - Todos los derechos Reservados 2025.</p>
     </footer>
 </body>
 
