--- a/producto.html
+++ b/producto.html
@@ -4,33 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FronEnd Store</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+    <title>FrontEnd Store</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Staatliches&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
     <header class="header">
         <a href="index.html">
-            <img class="header__logo" src="img/logo.png" alt="logotipo">
+            <img class="header__logo" src="img/logo.png" alt="Logotipo">
         </a>
     </header>
 
     <nav class="navegacion">
-        <a class="navegacion__enlace" href="index.html">Tienda</a>
-        <a class="navegacion__enlace navegacion__enlace--activo" href="nosotros.html">Nosotros</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
+        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     </nav>
 
     <main class="contenedor">
         <h1>React JS</h1>
 
         <div class="camisa">
-            <img class="camisa__inagen" src="img/3.jpg" alt="Imagen del Producto">
+            <img class="camisa__imagen" src="img/3.jpg" alt="Imagen del Producto">
 
             <div class="camisa__contenido">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, quisquam. Eius provident maiores amet quam ipsum inventore, non debitis laborum ullam iste quae fugit sapiente nesciunt consequuntur ratione facilis dolorem.</p>
+                <p>Suspendisse eu cursus mi. Nulla pretium laoreet mauris, ut sodales leo viverra et. Mauris sodales sodales mauris, et
+                pharetra orci feugiat non. In nec aliquam felis. Nam semper, mauris quis vestibulum cursus, enim augue fringilla turpis,
+                posuere vestibulum nisl.</p>
 
                 <form class="formulario">
                     <select class="formulario__campo">
@@ -47,7 +52,7 @@
     </main>
 
     <footer class="footer">
-        <p class="footer__texto">Front End Store - Todos los Derechos Reservados 20223.</p>
+        <p class="footer__texto">Front End Store - Todos los derechos Reservados 2025.</p>
     </footer>
 </body>
 
